redo links + colours

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -74,13 +74,9 @@ div[class*="language-"].line-numbers-mode .line-numbers-wrapper .line-number:hov
 .go-to-top {
     color: #f3f3f3 !important;
     z-index: 1;
-    background: #2196f3;
+    background: #5865F2;
     padding: 12px;
     border-radius: 15px;
-}
-
-.go-to-top:hover {
-    background: #64b5f7;    
 }
 
 .sidebar::-webkit-scrollbar {
