add algolia search

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -82,3 +82,9 @@ div[class*="language-"].line-numbers-mode .line-numbers-wrapper .line-number:hov
 .sidebar::-webkit-scrollbar {
     width: 0;
 }
+
+.theme-code-group__nav-tab-active[data-v-6f2a4370] 
+    border-bottom: #5865f2 1px solid !important;
+
+
+
